--- a/src/app/web/widgets/navbar/navbar.component.html
+++ b/src/app/web/widgets/navbar/navbar.component.html
@@ -5,7 +5,9 @@
         <img src="assets/logos/dark.png" alt="logo" height="70" />
       </a>
     </li>
-    <li class="item" *ngIf="false"><a href="#">Home</a></li>
+    <li class="item">
+      <a href="#" routerLink="/integrations">Integrations</a>
+    </li>
     <li class="item right"><a href="#" routerLink="/auth/login">Sign In</a></li>
     <li class="item button">
       <a
@@ -18,7 +20,9 @@
       </a>
     </li>
     <li class="toggle">
-      <a href="#"> <i class="bi bi-list" style="font-size: 30px"></i></a>
+      <a href="#">
+        <i class="bi bi-list" style="font-size: 30px"></i>
+      </a>
     </li>
   </ul>
 </nav>
