--- a/src/app/shared/widgets/gradient-background/gradient-background.component.html
+++ b/src/app/shared/widgets/gradient-background/gradient-background.component.html
@@ -1,6 +1,12 @@
 <div
   id="bg-wrap"
-  style="position: absolute; z-index: -99; opacity: 0.2"
+  style="
+    position: absolute;
+    z-index: -99;
+    opacity: 0.2;
+    height: 100%;
+    width: 100%;
+  "
   [ngStyle]="{ height: height, width: width, opacity }"
 >
   <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
