--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -147,3 +147,5 @@
 <app-features></app-features>
 
 <app-pricing-table></app-pricing-table>
+
+<app-payment-channels-widget></app-payment-channels-widget>
