--- a/src/app/web/widgets/features/features.component.scss
+++ b/src/app/web/widgets/features/features.component.scss
@@ -23,3 +23,11 @@
     line-height: initial;
   }
 }
+
+.new {
+  margin-top: -20px;
+  font-size: 9px;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
