--- a/src/app/auth/auth-wrapper.component.html
+++ b/src/app/auth/auth-wrapper.component.html
@@ -1,5 +1,5 @@
 <main>
-  <app-gradient-background [opacity]="0.4"></app-gradient-background>
+  <!-- <app-gradient-background [opacity]="0.4"></app-gradient-background> -->
 
   <div class="wrapper container">
     <div class="row d-flex">
