refactor: refactor css

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,8 @@
 /* Travilo */
 
-@import url("../sections/variables.css");
-@import url("../sections/fonts.css");
-@import url("../sections/global-settings.css");
+@import url("sections/variables.css");
+@import url("sections/fonts.css");
+@import url("sections/global-settings.css");
 
 /* Preloader */
 
