--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 
 @import "./assets/css/style.css";
 @import "./assets/css/responsive.css";
+@import "./assets/css/custom-animate.css";
 @import url("https://db.onlinewebfonts.com/c/d863218d588265bf96f8febaadafdd18?family=Trip+Sans");
 
 :root {
