--- a/src/assets/css/sections/fonts.css
+++ b/src/assets/css/sections/fonts.css
@@ -1,22 +1,24 @@
 @font-face {
   font-family: "Reey_Regular";
-  src: url("../fonts/Reey/Reey-Regular.eot");
-  src: url("../fonts/Reey/Reey-Regular-.eot#iefix") format("embedded-opentype"),
-    url("../fonts/Reey/Reey-Regular.woff") format("woff"),
-    url("../fonts/Reey/Reey-Regular.ttf") format("truetype"),
-    url("../fonts/Reey/Reey-Regular.svg#Reey_Regular") format("svg");
+  src: url("../../fonts/Reey/Reey-Regular.eot");
+  src: url("../../fonts/Reey/Reey-Regular-.eot#iefix")
+      format("embedded-opentype"),
+    url("../../fonts/Reey/Reey-Regular.woff") format("woff"),
+    url("../../fonts/Reey/Reey-Regular.ttf") format("truetype"),
+    url("../../fonts/Reey/Reey-Regular.svg#Reey_Regular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Gilroy_Bold";
-  src: url("../fonts/Gilroy/Gilroy-Bold.eot");
-  src: url("../fonts/Gilroy/Gilroy-Bold.eot");
-  src: url("../fonts/Gilroy/Gilroy-Bold-.eot#iefix") format("embedded-opentype"),
-    url("../fonts/Gilroy/Gilroy-Bold.woff") format("woff"),
-    url("../fonts/Gilroy/Gilroy-Bold.ttf") format("truetype"),
-    url("../fonts/Gilroy/Gilroy-Bold.svg#Gilroy_Bold") format("svg");
+  src: url("../../fonts/Gilroy/Gilroy-Bold.eot");
+  src: url("../../fonts/Gilroy/Gilroy-Bold.eot");
+  src: url("../../fonts/Gilroy/Gilroy-Bold-.eot#iefix")
+      format("embedded-opentype"),
+    url("../../fonts/Gilroy/Gilroy-Bold.woff") format("woff"),
+    url("../../fonts/Gilroy/Gilroy-Bold.ttf") format("truetype"),
+    url("../../fonts/Gilroy/Gilroy-Bold.svg#Gilroy_Bold") format("svg");
   font-weight: normal;
   font-style: normal;
 }
