--- a/src/app/web/wrapper.component.html
+++ b/src/app/web/wrapper.component.html
@@ -1,6 +1,6 @@
-<header>
+<div class="page-wrapper">
   <app-navbar></app-navbar>
-</header>
+
 <div class="menu-backdrop"></div>
 <div class="hidden-bar">
   <!-- Hidden Bar Wrapper -->
@@ -15,7 +15,7 @@
     <div class="nav-logo-box">
       <!-- logo will be copied here ! -->
     <div class="logo">
-            <a href="index.html" title="Travilo"><img src="assets/images/logo.png" alt="Travilo Logo" title="Travilo Logo"></a>
+            <a href="#" title="Logo" routerLink="/"><img src="assets/images/logo.png" alt=" Logo" title=" Logo"></a>
           </div></div>
 
     <!-- .Side-menu -->
@@ -239,3 +239,6 @@
     </div>
   </div>
 </footer>
+</div>
+
+
