refactor: refactor the navigation bar

--- a/src/app/web/wrapper.component.html
+++ b/src/app/web/wrapper.component.html
@@ -1,104 +1,7 @@
 <div class="page-wrapper">
   <app-navbar></app-navbar>
 
-<div class="menu-backdrop"></div>
-<div class="hidden-bar">
-  <!-- Hidden Bar Wrapper -->
-  <div class="hidden-bar-wrapper">
-    <div class="hidden-bar-closer">
-      <span class="icon">
-        <svg class="icon-close" role="presentation" viewBox="0 0 16 14">
-          <path d="M15 0L1 14m14 0L1 0" stroke="currentColor" fill="none" fill-rule="evenodd"></path>
-        </svg>
-      </span>
-    </div>
-    <div class="nav-logo-box">
-      <!-- logo will be copied here ! -->
-    <div class="logo">
-            <a href="#" title="Logo" routerLink="/"><img src="assets/images/logo.png" alt=" Logo" title=" Logo"></a>
-          </div></div>
 
-    <!-- .Side-menu -->
-    <nav class="side-menu">
-      <!-- main-menu will be copied here! -->
-    <ul class="navigation clearfix">
-                <li class="current dropdown">
-                  <a href="index.html">Home<button type="button" class="btn-expander"><i class="icon icon-arrow-down"></i></button></a>
-                  <ul style="display: none;">
-                    <li>
-                      <a href="index.html">Home 01</a>
-                    </li>
-                    <li>
-                      <a href="index-2.html">Home 02</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="tour-list.html">Tours<button type="button" class="btn-expander"><i class="icon icon-arrow-down"></i></button></a>
-                  <ul style="display: none;">
-                    <li>
-                      <a href="tour-list.html">Tours List</a>
-                    </li>
-                    <li>
-                      <a href="tour-packages.html">Tour Packages</a>
-                    </li>
-                    <li>
-                      <a href="tour-single.html">Tour Details</a>
-                    </li>
-                    <li>
-                      <a href="activities.html">Activities</a>
-                    </li>
-                    <li>
-                      <a href="activity-single.html">Activity Details</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="destinations.html">Destination<button type="button" class="btn-expander"><i class="icon icon-arrow-down"></i></button></a>
-                  <ul style="display: none;">
-                    <li>
-                      <a href="destinations.html">All Destinations</a>
-                    </li>
-                    <li>
-                      <a href="destination-single.html">Destination Single</a>
-                    </li>
-                    <li>
-                      <a href="hotels.html">Hotels</a>
-                    </li>
-                    <li>
-                      <a href="hotel-single.html">Hotel Details</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="about.html">About</a>
-                </li>
-                <li class="dropdown">
-                  <a href="blog.html">News<button type="button" class="btn-expander"><i class="icon icon-arrow-down"></i></button></a>
-                  <ul style="display: none;">
-                    <li>
-                      <a href="blog.html">Our Blog</a>
-                    </li>
-                    <li>
-                      <a href="blog-single.html">Blog Details</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="contact.html">Contact</a>
-                </li>
-              </ul></nav><!-- .side-menu -->
-
-    <div class="links-box clearfix">
-      <div class="clearfix">
-        <div class="link">
-          <a href="contact.html" class="theme-btn btn-style-one"><span>Login / Signup</span></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- / Hidden Bar Wrapper -->
-</div>
 
 <router-outlet></router-outlet>
 
@@ -110,7 +13,7 @@
           <div class="footer-column col-xl-4 col-lg-3 col-md-6 col-sm-12">
             <div class="footer-widget about-widget">
               <div class="footer-logo">
-                <a href="index.html" title="Travilo"><img src="assets/images/logo.png" alt="" title="Travilo"></a>
+                <a href="#" routerLink="/"  title="Logo"><img src="assets/images/logo.png" alt="" title="Logo"></a>
               </div>
               <div class="footer-info">
                 <ul class="info">
