--- a/src/app/web/widgets/navbar/navbar.component.html
+++ b/src/app/web/widgets/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <!--Logo-->
         <div class="logo-box">
           <div class="logo">
-            <a href="index.html" title="Travilo"><img src="assets/images/logo.png" alt="Travilo Logo" title="Travilo Logo"></a>
+            <a href="#" routerLink="/" title="Travilo"><img src="assets/images/logo.png" alt="Logo" title="Logo"></a>
           </div>
         </div>
 
@@ -16,70 +16,16 @@
           <div class="nav-outer clearfix">
             <nav class="main-menu">
               <ul class="navigation clearfix">
-                <li class="current dropdown">
-                  <a href="index.html">Home</a>
-                  <ul>
-                    <li>
-                      <a href="index.html">Home 01</a>
-                    </li>
-                    <li>
-                      <a href="index-2.html">Home 02</a>
-                    </li>
-                  </ul>
+                <li routerLink="/" routerLinkActive="current">
+                  <a href="#" routerLink="/" routerLinkActive="current">Home</a>
                 </li>
-                <li class="dropdown">
-                  <a href="tour-list.html">Tours</a>
-                  <ul>
-                    <li>
-                      <a href="tour-list.html">Tours List</a>
-                    </li>
-                    <li>
-                      <a href="tour-packages.html">Tour Packages</a>
-                    </li>
-                    <li>
-                      <a href="tour-single.html">Tour Details</a>
-                    </li>
-                    <li>
-                      <a href="activities.html">Activities</a>
-                    </li>
-                    <li>
-                      <a href="activity-single.html">Activity Details</a>
-                    </li>
-                  </ul>
+
+                <li href="#" routerLink="/about" routerLinkActive="current">
+                  <a href="#" routerLink="/about" routerLinkActive="current">About</a>
                 </li>
-                <li class="dropdown">
-                  <a href="destinations.html">Destination</a>
-                  <ul>
-                    <li>
-                      <a href="destinations.html">All Destinations</a>
-                    </li>
-                    <li>
-                      <a href="destination-single.html">Destination Single</a>
-                    </li>
-                    <li>
-                      <a href="hotels.html">Hotels</a>
-                    </li>
-                    <li>
-                      <a href="hotel-single.html">Hotel Details</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="about.html">About</a>
-                </li>
-                <li class="dropdown">
-                  <a href="blog.html">News</a>
-                  <ul>
-                    <li>
-                      <a href="blog.html">Our Blog</a>
-                    </li>
-                    <li>
-                      <a href="blog-single.html">Blog Details</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="contact.html">Contact</a>
+
+                <li href="#" routerLink="/contact" routerLinkActive="current">
+                  <a href="#" routerLink="/contact" routerLinkActive="current">Contact</a>
                 </li>
               </ul>
             </nav><!-- .main-menu -->
@@ -134,12 +80,138 @@
             </ul>
           </div>
           <div class="link call-to">
-            <a href="tel:+96899999000"><i class="icon fa-solid fa-phone"></i> Call Us <span class="nmbr">+968
-                99999000</span></a>
+            <a href="tel:+254725270930">
+              <i class="bi bi-telephone-fill"></i>
+              Call Us <span class="nmbr">+254725270930</span></a>
           </div>
         </div>
       </div>
     </div>
   </div>
   <!-- End Header Upper -->
+  <div class="menu-backdrop"></div>
+  <div class="hidden-bar">
+    <!-- Hidden Bar Wrapper -->
+    <div class="hidden-bar-wrapper">
+      <div class="hidden-bar-closer">
+        <span class="icon">
+          <svg class="icon-close" role="presentation" viewBox="0 0 16 14">
+            <path d="M15 0L1 14m14 0L1 0" stroke="currentColor" fill="none" fill-rule="evenodd"></path>
+          </svg>
+        </span>
+      </div>
+      <div class="nav-logo-box">
+        <div class="logo">
+          <a href="#" title="Logo" routerLink="/"><img src="assets/images/logo.png" alt=" Logo" title=" Logo"></a>
+        </div>
+      </div>
+
+      <nav class="side-menu">
+        <ul class="navigation clearfix">
+          <li>
+            <a href="#" routerLink="/" routerLinkActive="current">
+              Home
+            </a>
+          </li>
+          <li>
+            <a href="#">Tours</a>
+
+          </li>
+          <li class="dropdown">
+            <a href="#" routerLink="/" routerLinkActive="current">Destinations</a>
+
+          </li>
+          <li>
+            <a href="#" routerLink="/about" routerLinkActive="current">About</a>
+          </li>
+          <!-- <li class="dropdown">
+                  <a href="blog.html">News<button type="button" class="btn-expander"><i class="icon icon-arrow-down"></i></button></a>
+                  <ul style="display: none;">
+                    <li>
+                      <a href="blog.html">Our Blog</a>
+                    </li>
+                    <li>
+                      <a href="blog-single.html">Blog Details</a>
+                    </li>
+                  </ul>
+                </li> -->
+          <li>
+            <a href="#" routerLink="/contact" routerLinkActive="current">Contact</a>
+          </li>
+        </ul>
+      </nav><!-- .side-menu -->
+
+      <div class="links-box clearfix">
+        <div class="clearfix">
+          <div class="link">
+            <a href="#" routerLink="/contact" routerLinkActive="current" class="theme-btn btn-style-one"><span>Login /
+                Signup</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
+<div class="menu-backdrop"></div>
+<div class="hidden-bar">
+  <!-- Hidden Bar Wrapper -->
+  <div class="hidden-bar-wrapper">
+    <div class="hidden-bar-closer">
+      <span class="icon">
+        <svg class="icon-close" role="presentation" viewBox="0 0 16 14">
+          <path d="M15 0L1 14m14 0L1 0" stroke="currentColor" fill="none" fill-rule="evenodd"></path>
+        </svg>
+      </span>
+    </div>
+    <div class="nav-logo-box">
+      <div class="logo">
+        <a href="#" title="Logo" routerLink="/"><img src="assets/images/logo.png" alt=" Logo" title=" Logo"></a>
+      </div>
+    </div>
+
+    <nav class="side-menu">
+      <ul class="navigation clearfix">
+        <li>
+          <a href="#" routerLink="/" routerLinkActive="current">
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="#">Tours</a>
+
+        </li>
+        <li class="dropdown">
+          <a href="#" routerLink="/" routerLinkActive="current">Destinations</a>
+
+        </li>
+        <li>
+          <a href="#" routerLink="/about" routerLinkActive="current">About</a>
+        </li>
+        <!-- <li class="dropdown">
+                  <a href="blog.html">News<button type="button" class="btn-expander"><i class="icon icon-arrow-down"></i></button></a>
+                  <ul style="display: none;">
+                    <li>
+                      <a href="blog.html">Our Blog</a>
+                    </li>
+                    <li>
+                      <a href="blog-single.html">Blog Details</a>
+                    </li>
+                  </ul>
+                </li> -->
+        <li>
+          <a href="#" routerLink="/contact" routerLinkActive="current">Contact</a>
+        </li>
+      </ul>
+    </nav><!-- .side-menu -->
+
+    <div class="links-box clearfix">
+      <div class="clearfix">
+        <div class="link">
+          <a href="#" routerLink="/contact" routerLinkActive="current" class="theme-btn btn-style-one"><span>Login /
+              Signup</span></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
