--- a/src/app/web/widgets/navbar/navbar.component.html
+++ b/src/app/web/widgets/navbar/navbar.component.html
@@ -41,28 +41,10 @@
         </div>
 
         <div class="links-box clearfix">
-          <div class="link login">
+          <div class="link login" *ngIf="false">
             <a href="#">Login / Signup</a>
           </div>
-          <div class="link lang-box">
-            <div class="lang-btn clearfix">
-              <span class="txt">En</span><span class="icon far fa-angle-down"></span>
-            </div>
-            <ul class="lang-list">
-              <li>
-                <a href="#">Tur</a>
-              </li>
-              <li>
-                <a href="#">Esp</a>
-              </li>
-              <li>
-                <a href="#">Rus</a>
-              </li>
-              <li>
-                <a href="#">Hin</a>
-              </li>
-            </ul>
-          </div>
+
           <div class="link social">
             <ul class="social-links clearfix">
               <li>
