refactor: refactor meta service

--- a/src/app/web/widgets/navbar/navbar.component.html
+++ b/src/app/web/widgets/navbar/navbar.component.html
@@ -35,7 +35,7 @@
 
         <!-- Hidden Nav Toggler -->
         <div class="nav-toggler">
-          <button class="hidden-bar-opener">
+          <button class="hidden-bar-opener" id="menuButton">
             <span class="icon"><img src="assets/images/icons/menu-icon.svg" alt=""></span>
           </button>
         </div>
@@ -134,66 +134,3 @@
     </div>
   </div>
 </header>
-<div class="menu-backdrop"></div>
-<div class="hidden-bar">
-  <!-- Hidden Bar Wrapper -->
-  <div class="hidden-bar-wrapper">
-    <div class="hidden-bar-closer">
-      <span class="icon">
-        <svg class="icon-close" role="presentation" viewBox="0 0 16 14">
-          <path d="M15 0L1 14m14 0L1 0" stroke="currentColor" fill="none" fill-rule="evenodd"></path>
-        </svg>
-      </span>
-    </div>
-    <div class="nav-logo-box">
-      <div class="logo">
-        <a href="#" title="Logo" routerLink="/"><img src="assets/images/logo.png" alt=" Logo" title=" Logo"></a>
-      </div>
-    </div>
-
-    <nav class="side-menu">
-      <ul class="navigation clearfix">
-        <li>
-          <a href="#" routerLink="/" routerLinkActive="current">
-            Home
-          </a>
-        </li>
-        <li>
-          <a href="#">Tours</a>
-
-        </li>
-        <li class="dropdown">
-          <a href="#" routerLink="/" routerLinkActive="current">Destinations</a>
-
-        </li>
-        <li>
-          <a href="#" routerLink="/about" routerLinkActive="current">About</a>
-        </li>
-        <!-- <li class="dropdown">
-                  <a href="blog.html">News<button type="button" class="btn-expander"><i class="icon icon-arrow-down"></i></button></a>
-                  <ul style="display: none;">
-                    <li>
-                      <a href="blog.html">Our Blog</a>
-                    </li>
-                    <li>
-                      <a href="blog-single.html">Blog Details</a>
-                    </li>
-                  </ul>
-                </li> -->
-        <li>
-          <a href="#" routerLink="/contact" routerLinkActive="current">Contact</a>
-        </li>
-      </ul>
-    </nav><!-- .side-menu -->
-
-    <div class="links-box clearfix">
-      <div class="clearfix">
-        <div class="link">
-          <a href="#" routerLink="/contact" routerLinkActive="current" class="theme-btn btn-style-one"><span>Login /
-              Signup</span></a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
