--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1399,6 +1399,7 @@ body.visible-sidebar {
   background: rgba(0, 0, 0, 0.7);
   cursor: pointer;
   opacity: 0;
+  opacity: 1 !important;
   visibility: hidden;
   transition: all 300ms ease;
   -moz-transition: all 300ms ease;
