--- a/public/css/auth-styles.css
+++ b/public/css/auth-styles.css
@@ -1,180 +1,3 @@
-body {
-    margin: 100px auto;
-    background: #eff1f3;
-    font-family: "Barlow", sans-serif;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+body{align-items:center;background:#eff1f3;display:flex;flex-direction:column;font-family:Barlow,sans-serif;height:90vh;justify-content:center;margin:100px auto}a{color:#428eff;text-decoration:none}a:hover{text-decoration:underline}h1{color:#000;font-size:28px;margin:0 0 30px}h1,h3{font-weight:100}h3{color:#8c8c8c;font-size:14px;margin:0 0 7px}.alert{background:#fff;border-radius:4px;box-shadow:0 4px 12px 0 rgba(0,0,0,.05);box-sizing:border-box;min-height:103px;overflow:hidden;padding:20px 28px;position:relative;position:fixed;right:40px;top:45px;width:325px;z-index:99999}.alert:before{background:#da5656;content:"";height:100%;left:0;position:absolute;top:0;width:5px}.alert__title{color:#000;font-size:18px;line-height:24px;margin-bottom:7px}.alert__description{color:#727272;font-size:14px;line-height:17px}.auth{background:#fff;border-radius:4px;box-shadow:0 4px 12px 0 rgba(0,0,0,.05);box-sizing:border-box;margin:0 auto;max-width:550px;min-height:436px;min-width:500px;overflow:hidden;padding:48px 48px 85px;position:relative;text-align:center}.auth-footer{background:#f7f7f7;bottom:0;color:#727272;font-size:14px;left:0;line-height:64px;position:absolute;right:0}.form-item{margin:13px 0;position:relative}input{border:1px solid #ced4da;border-radius:3px;box-shadow:0 0 0 0 rgba(136,184,254,0);box-sizing:border-box;font-size:16px;height:48px;outline:none;padding:17px 12px 0;transition:box-shadow .3s;width:100%}input:focus{border-color:#88b8fe;box-shadow:0 0 0 4px rgba(136,184,254,.25)}label{color:#6b757c;left:12px;line-height:48px;pointer-events:none;position:absolute;top:0;transition:.3s}input:focus~label,input:not(:focus):valid~label{font-size:11px;top:-10px}.form-submit{margin-top:40px}button{background:#428eff;border:0;border-radius:4px;color:#fff;height:50px;text-transform:uppercase;width:100%}button,footer{text-align:center}footer{color:#9a9b9d;font-size:12px;margin:100px auto}.check{align-items:center;display:flex;flex-direction:row;gap:5px;justify-content:flex-start}.check .form-check-input{height:auto;width:auto}.check label{position:static}.action{margin-top:20px}.action a{font-size:inherit}
 
-a {
-    color: #428eff;
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
-
-h1 {
-    font-size: 28px;
-    color: #000;
-    font-weight: 100;
-    margin: 0;
-    margin-bottom: 30px;
-}
-
-h3 {
-    font-size: 14px;
-    color: #8c8c8c;
-    font-weight: 100;
-    margin: 0;
-    margin-bottom: 7px;
-}
-
-.alert {
-    z-index: 99999;
-    position: relative;
-    border-radius: 4px;
-    min-height: 103px;
-    background: #fff;
-    overflow: hidden;
-    padding: 20px 28px;
-    box-sizing: border-box;
-    position: fixed;
-    width: 325px;
-    top: 45px;
-    right: 40px;
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
-}
-.alert:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 5px;
-    background: #da5656;
-}
-
-.alert__title {
-    font-size: 18px;
-    line-height: 24px;
-    color: #000;
-    margin-bottom: 7px;
-}
-
-.alert__description {
-    font-size: 14px;
-    line-height: 17px;
-    color: #727272;
-}
-
-.auth {
-    position: relative;
-    margin: 0 auto;
-    padding: 48px;
-    padding-bottom: 85px;
-    max-width: 550px;
-    min-width: 500px;
-    background: #fff;
-    box-sizing: border-box;
-    min-height: 436px;
-    border-radius: 4px;
-    text-align: center;
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
-    overflow: hidden;
-}
-.auth-footer {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #f7f7f7;
-    font-size: 14px;
-    color: #727272;
-    line-height: 64px;
-}
-
-.form-item {
-    margin: 13px 0;
-    position: relative;
-}
-
-input {
-    font-size: 16px;
-    height: 48px;
-    width: 100%;
-    padding: 0 12px;
-    padding-top: 17px;
-    box-sizing: border-box;
-    border: 1px solid #ced4da;
-    outline: none;
-    border-radius: 3px;
-    box-shadow: 0 0 0 0 rgba(136, 184, 254, 0);
-    transition: box-shadow 0.3s;
-}
-input:focus {
-    border-color: #88b8fe;
-    box-shadow: 0 0 0 4px rgba(136, 184, 254, 0.25);
-}
-
-label {
-    position: absolute;
-    pointer-events: none;
-    left: 12px;
-    top: 0;
-    line-height: 48px;
-    transition: 0.3s;
-    color: #6b757c;
-}
-input:focus ~ label,
-input:not(:focus):valid ~ label {
-    top: -10px;
-    font-size: 11px;
-}
-
-.form-submit {
-    margin-top: 40px;
-}
-
-button {
-    height: 50px;
-    width: 100%;
-    border-radius: 4px;
-    background: #428eff;
-    color: #fff;
-    text-transform: uppercase;
-    text-align: center;
-    border: 0;
-}
-
-footer {
-    font-size: 12px;
-    text-align: center;
-    margin: 100px auto;
-    color: #9a9b9d;
-}
-
-.check {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 5px;
-}
-.check .form-check-input {
-    height: initial;
-    width: auto;
-}
-.check label {
-    position: initial;
-}
-
-.action {
-    margin-top: 20px;
-}
-.action a {
-    font-size: inherit;
-}
+/*# sourceMappingURL=auth-styles.css.map*/
