--- a/public/css/custom-nav-bar.css
+++ b/public/css/custom-nav-bar.css
@@ -1,147 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
+*,:after,:before{box-sizing:border-box}.container{margin:auto;width:80%}body{font:14px/22px Lato,Arial,sans-serif}.lighter-text{color:#c98a41}.main-color-text{color:#4c5324!important}.navbar-right{float:right}.navbar-right ul li{display:inline}.navbar-right ul li a{color:#4c5324;text-decoration:none}.navbar-right ul li a:hover{color:#000}li.cart{align-items:center;display:flex;flex-direction:column;justify-content:center}.badge{background-color:#c98a41;border-radius:10px;color:#fff;display:inline-block;font-size:12px;line-height:1;padding:3px 7px;text-align:center;vertical-align:middle;white-space:nowrap}.shopping-cart{background:#fff;border-radius:3px;float:right;margin:20px 0;padding:20px;position:relative;width:320px}.shopping-cart .shopping-cart-header{border-bottom:1px solid #e8e8e8;padding-bottom:15px}.shopping-cart .shopping-cart-header .shopping-cart-total{float:right}.shopping-cart .shopping-cart-items{padding-top:20px}.shopping-cart .shopping-cart-items li{margin-bottom:18px}.shopping-cart .shopping-cart-items img{float:left;margin-right:12px}.shopping-cart .shopping-cart-items .item-name{display:block;font-size:16px;padding-top:10px}.shopping-cart .shopping-cart-items .item-price{color:#4c5324;margin-right:8px}.shopping-cart .shopping-cart-items .item-quantity{color:#c98a41}.shopping-cart:after{border:8px solid transparent;border-bottom-color:#fff;bottom:100%;content:" ";height:0;left:89%;margin-left:-8px;pointer-events:none;position:absolute;width:0}li.cart{bottom:0!important}.cart-group{bottom:0}.cart-icon{color:#515783;float:left;font-size:44px;margin-right:7px}.button{background:#4c5324;border-radius:3px;color:#fff;display:block;font-size:16px;margin:25px 0 15px;padding:12px;text-align:center;text-decoration:none}.button:hover{background:#565e29}.clearfix:after{clear:both;content:"";display:table}
 
-.container {
-  margin: auto;
-  width: 80%;
-}
-
-body {
-  font: 14px/22px "Lato", Arial, sans-serif;
-}
-
-.lighter-text {
-  color: #C98A41;
-}
-
-.main-color-text {
-  color: #4C5324 !important;
-}
-
-.navbar-right {
-  float: right;
-}
-.navbar-right ul li {
-  display: inline;
-}
-.navbar-right ul li a {
-  color: #4C5324;
-  text-decoration: none;
-}
-.navbar-right ul li a:hover {
-  color: black;
-}
-
-li.cart {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.badge {
-  background-color: #C98A41;
-  border-radius: 10px;
-  color: white;
-  display: inline-block;
-  font-size: 12px;
-  line-height: 1;
-  padding: 3px 7px;
-  text-align: center;
-  vertical-align: middle;
-  white-space: nowrap;
-}
-
-.shopping-cart {
-  margin: 20px 0;
-  float: right;
-  background: white;
-  width: 320px;
-  position: relative;
-  border-radius: 3px;
-  padding: 20px;
-}
-.shopping-cart .shopping-cart-header {
-  border-bottom: 1px solid #E8E8E8;
-  padding-bottom: 15px;
-}
-.shopping-cart .shopping-cart-header .shopping-cart-total {
-  float: right;
-}
-.shopping-cart .shopping-cart-items {
-  padding-top: 20px;
-}
-.shopping-cart .shopping-cart-items li {
-  margin-bottom: 18px;
-}
-.shopping-cart .shopping-cart-items img {
-  float: left;
-  margin-right: 12px;
-}
-.shopping-cart .shopping-cart-items .item-name {
-  display: block;
-  padding-top: 10px;
-  font-size: 16px;
-}
-.shopping-cart .shopping-cart-items .item-price {
-  color: #4C5324;
-  margin-right: 8px;
-}
-.shopping-cart .shopping-cart-items .item-quantity {
-  color: #C98A41;
-}
-
-.shopping-cart:after {
-  bottom: 100%;
-  left: 89%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-  border-bottom-color: white;
-  border-width: 8px;
-  margin-left: -8px;
-}
-
-li.cart {
-  bottom: 0 !important;
-}
-
-.cart-group {
-  bottom: 0;
-}
-
-.cart-icon {
-  color: #515783;
-  font-size: 44px;
-  margin-right: 7px;
-  float: left;
-}
-
-.button {
-  background: #4C5324;
-  color: white;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  display: block;
-  border-radius: 3px;
-  font-size: 16px;
-  margin: 25px 0 15px 0;
-}
-.button:hover {
-  background: #565e29;
-}
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+/*# sourceMappingURL=custom-nav-bar.css.map*/
