--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,6 @@
 // Variables
-// @import "variables";
-/* Bootstrap */
-// @import "bootstrap/scss/bootstrap";
 @import "bootstrap-icons/font/bootstrap-icons.css";
-@import "~@fortawesome/fontawesome-free/scss/fontawesome";
-@import "~@fortawesome/fontawesome-free/scss/solid";
-@import "~@fortawesome/fontawesome-free/scss/brands";
-@import "~@fortawesome/fontawesome-free/scss/regular";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
