--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,3 +17,31 @@
     --light-bg: #f8fafa;
     --background: #fefcf7;
 }
+
+.rise-shake {
+    animation: jump-shaking 1.83s infinite;
+}
+
+@keyframes jump-shaking {
+    0% {
+        transform: translateX(0) rotate(0);
+    }
+    35% {
+        transform: translateY(0) rotate(0);
+    }
+    85% {
+        transform: translateY(0) rotate(0);
+    }
+    89% {
+        transform: translateY(-2px) rotate(-17deg);
+    }
+    93% {
+        transform: translateY(-3px) rotate(17deg);
+    }
+    98% {
+        transform: translateY(-4px) rotate(-17deg);
+    }
+    100% {
+        transform: translateY(0) rotate(0);
+    }
+}
