--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,7 @@
 // Variables
 @import "bootstrap-icons/font/bootstrap-icons.css";
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,11 +19,34 @@
     --light-bg: #f8fafa;
     --background: #fefcf7;
 }
-
+.pacifico {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+.tilt-shake {
+    animation: tilt-shaking 0.3s infinite;
+}
 .rise-shake {
     animation: jump-shaking 1.83s infinite;
 }
-
+@keyframes tilt-shaking {
+    0% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(5deg);
+    }
+    50% {
+        transform: rotate(0eg);
+    }
+    75% {
+        transform: rotate(-5deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
 @keyframes jump-shaking {
     0% {
         transform: translateX(0) rotate(0);
