styles: add happy-dance animation

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,6 +30,36 @@
 .rise-shake {
     animation: jump-shaking 1.83s infinite;
 }
+.happy-jump {
+    animation-name: happy-jump;
+    animation-duration: 3s;
+    transform-origin: 50% 50%;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes happy-jump {
+    0% {
+        transform: scale(1, 1) translateY(0);
+    }
+    10% {
+        transform: scale(1.1, 0.9) translateY(0);
+    }
+    30% {
+        transform: scale(0.9, 1.1) translateY(-100px);
+    }
+    50% {
+        transform: scale(1.05, 0.95) translateY(0);
+    }
+    57% {
+        transform: scale(1, 1) translateY(-7px);
+    }
+    64% {
+        transform: scale(1, 1) translateY(0);
+    }
+    100% {
+        transform: scale(1, 1) translateY(0);
+    }
+}
 @keyframes tilt-shaking {
     0% {
         transform: rotate(0deg);
