--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+// @import "./variables";
 
 :root {
     --primary: #028ab0;
@@ -20,14 +21,60 @@
     --white: #ffffff;
     --light-bg: #f8fafa;
     --background: #fefcf7;
+    --gradient-color: linear-gradient(180deg, #d2ff00 0%, #00d2ff 100%);
 }
 
 * {
     font-family: "Quicksand", "Varela Round", sans-serif;
 }
-.cursive {
-    // font-family: "Sacramento", cursive;
+
+.animated-text {
+    position: absolute;
+    margin: 0;
 }
+
+.first {
+    color: white;
+    -webkit-text-stroke: 2px var(--primary);
+}
+
+.second {
+    color: var(--primary);
+    -webkit-text-stroke: 2px var(--primary);
+    animation: waves 2s ease-in-out infinite;
+}
+
+@keyframes waves {
+    0%,
+    100% {
+        clip-path: polygon(
+            0% 45%,
+            16% 44%,
+            33% 50%,
+            54% 60%,
+            70% 81%,
+            84% 59%,
+            100% 52%,
+            100% 100%,
+            0% 100%
+        );
+    }
+
+    50% {
+        clip-path: polygon(
+            0% 60%,
+            15% 65%,
+            34% 66%,
+            51% 62%,
+            67% 50%,
+            84% 45%,
+            100% 46%,
+            100% 100%,
+            0% 100%
+        );
+    }
+}
+
 .tilt-shake {
     animation: tilt-shaking 0.3s infinite;
 }
