--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,5 @@
 // Variables
 @import "bootstrap-icons/font/bootstrap-icons.css";
-@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Varela+Round&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Sora:wght@100..800&display=swap");
 @tailwind base;
 @tailwind components;
@@ -25,7 +22,7 @@
 }
 
 * {
-    font-family: "Quicksand", "Varela Round", sans-serif;
+    font-family: "Quicksand", sans-serif;
 }
 
 .animated-text {
@@ -35,7 +32,7 @@
 
 .first {
     color: white;
-    -webkit-text-stroke: 2px var(--primary);
+    -webkit-text-stroke: 2px transparent;
 }
 
 .second {
